# git-web-server

./: Cargo.toml  default.nix  flake.nix
src/: main.rs
templates/: base.html
view/: base.html
view/sidebar/: sidebar.html
webroot/: main.css  main.js
