[package]
name = "git-web-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-files = "0.6.2"
actix-web = { version = "4.2.1", features = ["rustls"] }
clap = { version = "4.0.8", features = ["derive", "env"] }
tera = "1.17.1"
